--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,6 @@ a:focus {
     text-decoration: none;
 }
 .container {
-    width: 1200px;
-    padding: 0;
     overflow: hidden;
 }
 .bold-text {
@@ -42,7 +40,7 @@ a:focus {
     border-bottom: 1px solid #e9e9e9;
 }
 .logo-header img {
-    width: 136px;
+    width: 222px;
 }
 .relative-content {
     position: relative;
@@ -94,12 +92,8 @@ a:focus {
 .main-page-search::placeholder {
     color: #000;
 }
-.header-icons a {
-    margin-left: 35px;
-}
 .gamburger-block, .logo-header {
     width: 33.3%;
-    padding-left: 43px;
 }
 nav {
     text-align: center;
@@ -124,7 +118,6 @@ nav ul {
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #1c1c1c;
-    font-size: 10px;
 }
 .topmenu > li > a:hover {
     background-color: #ededed;
@@ -132,76 +125,6 @@ nav ul {
 }
 .topmenu > li:hover {
     background-color: #ededed;
-}
-.submenu {
-    position: absolute;
-    z-index: 5;
-    width: 100%;
-    visibility: hidden;
-    opacity: 0;
-    /*transition: .1s ease-in-out;*/
-    left: 0;
-    right: 0;
-    background-color: #ededed;
-    padding: 40px;
-    background-image: url("../images/flower.png");
-    background-repeat: no-repeat;
-    background-position-x: right;
-    background-position-y: bottom;
-}
-.submenu li {
-    position: relative;
-    text-align: left;
-}
-.submenu h3 {
-    padding: 0 20px;
-    margin-top: 0;
-    float: left;
-    width: calc(100% / 2);
-}
-.menu-list-title:before {
-    content: '•';
-    position: absolute;
-    left: 5px;
-    top: 0px;
-    font-size: 26px;
-}
-.submenu a {
-    color: #1c1c1c;
-    text-align: left;
-    font-size: 14px;
-    letter-spacing: 1px;
-    padding: 6px 20px;
-}
-.submenu .submenu {
-    position: absolute;
-    top: 0;
-    left: calc(100% - 1px);
-    left: -webkit-calc(100% - 1px);
-}
-.submenu > li {
-    width: 24%;
-    display: inline-block;
-    vertical-align: top;
-}
-nav li:hover > .submenu {
-    visibility: visible;
-    opacity: 1;
-    transform: translateY(0px);
-}
-.submenu .menu-list-title {
-    font-weight: bold;
-    font-size: 18px;
-    position: relative;
-}
-.menu-list-title {
-    margin-top: 30px;
-}
-.menu-list-title:first-child {
-    margin-top: 0;
-}
-.logo-header {
-    padding-left: 13px;
 }
 .owl-dot {
     width: 12px;
@@ -248,25 +171,6 @@ nav li:hover > .submenu {
     font-size: 36px;
     color: #1c1c1e;
 }
-.owl-absolute-block {
-    width: 575px;
-    position: absolute;
-    top: 21%;
-    left: 14%;
-}
-.owl-absolute-block h1 {
-    font-size: 58px;
-    margin-top: 0;
-    line-height: 1;
-    margin-bottom: 9px;
-}
-.owl-absolute-block h1 span {
-    font-size: 37px;
-}
-.owl-absolute-block p {
-    margin-bottom: 93px;
-    padding-right: 10px;
-}
 .main-button {
     color: #000;
     border: 1px solid #000;
@@ -280,12 +184,12 @@ nav li:hover > .submenu {
     color: #000;
 }
 .main-button:focus {
-    border-color: #de0588;
+    border-color: #ff6d0a;
     color: #000;
+    outline: none;
 }
 .main-button::before {
     content: '';
-    background-color: #dfddde;
     width: 100px;
     height: 15px;
     position: absolute;
@@ -357,16 +261,12 @@ nav li:hover > .submenu {
     margin-bottom: 77px;
 }
 .category-links-text {
-    overflow: hidden;
-    position: absolute;
-    width: 190px;
-    right: 0;
-    bottom: 0px;
-    padding: 20px 20px;
+    width: 130px;
+    padding: 20px 0;
     background-color: #fff;
 }
 .category-links-text:hover a {
-    color: #de0588;
+    color: #ff6d0a;
 }
 .category-links-item {
     width: 32%;
@@ -384,11 +284,11 @@ nav li:hover > .submenu {
     color: #000;
 }
 .category-links-text a:hover {
-    color: #de0588;
+    color: #ff6d0a;
     text-decoration: none;
 }
 .category-links-text:hover:after {
-    background-color: #de0588;
+    background-color: #ff6d0a;
 }
 .category-item-block img {
     width: 100%;
@@ -409,7 +309,7 @@ nav li:hover > .submenu {
     color: #000;
 }
 .category-text-block a:hover {
-    color: #de0588;
+    color: #ff6d0a;
     text-decoration: none;
 }
 .category-text-block {
@@ -487,10 +387,9 @@ nav li:hover > .submenu {
     margin: -80px 0px;
 }
 .main-button-light::after, .main-button-light::before {
-    background-color: #fafafa;
+    background-color: #fff;
 }
 .main-button-light {
-    margin-top: 24px;
     display: inline-block;
     padding: 20px 36px;
 }
@@ -745,26 +644,6 @@ nav li:hover > .submenu {
     cursor: pointer;
     text-align: right;
 }
-#burger-content {
-    background-image: url("../images/flower-menu.png");
-    background-position-x: right;
-    background-position-y: center;
-    background-repeat: no-repeat;
-}
-.modal-city-block {
-    column-count: 3;
-    margin-bottom: 30px;
-}
-.modal-city-block a {
-    display: block;
-    color: #000;
-    margin-bottom: 15px;
-}
-.modal-title-city {
-    text-align: center;
-    margin-bottom: 30px;
-    margin-top: 0;
-}
 .modal-inputs input {
     background-color: #f5f5f5;
     border: none;
@@ -793,22 +672,6 @@ button.close {
     position: relative;
     top: 15px;
     right: 15px;
-}
-.burger-city-link i {
-    margin-right: 5px;
-    color: #de0588;
-    border-bottom: 1px dashed transparent;
-}
-.burger-city-link button {
-    background-color: transparent;
-    color: #de0588;
-    border: none;
-    border-bottom: 1px dashed #de0588;
-    padding: 0;
-}
-.burger-city-link span {
-    border-bottom: 1px dashed transparent;
-    margin-right: 5px;
 }
 #menu-left-acide ul ul {
     display: none;
@@ -863,9 +726,6 @@ button.close {
 #menu-left-acide > ul > li {
     margin: 30px 0;
 }
-.burger-city-link {
-    margin-bottom: 80px;
-}
 .navbar-toggle:hover .icon-bar {
     background-color: #de0588;
 }
@@ -880,10 +740,6 @@ button.close {
 }
 .header-icons a:hover .header-icon-hover, .button-search-input:hover .header-icon-hover {
     display: block;
-}
-.header-icons {
-    display: flex;
-    padding-right: 57px;
 }
 #menu-left-acide {
     margin-bottom: 80px;
@@ -904,11 +760,6 @@ button.close {
 }
 .advantages-description-mobile {
     display: none;
-}
-@media (max-width: 1199px) {
-    .container {
-        width: 970px;
-    }
 }
 @media (max-width: 991px) {
     .gamburger-block {
@@ -982,9 +833,6 @@ button.close {
     }
     .main-button {
         padding: 13px 20px;
-    }
-    .container {
-        width: 750px;
     }
     .owl-carousel {
         margin-bottom: 43px;
@@ -1124,12 +972,6 @@ button.close {
         margin-top: 46px;
         margin-bottom: 26px;
     }
-    .follow-block-flex input {
-        background-image: url("../images/send.png");
-        background-repeat: no-repeat;
-        background-position-x: right;
-        background-position-y: center;
-    }
     .flower-left-absolute img {
         height: 375px;
     }
@@ -1245,14 +1087,8 @@ button.close {
         margin-right: 10px;
         font-size: 20px;
     }
-    .submenu > li {
-        width: 49%;
-    }
 }
 @media (max-width: 767px) {
-    .container {
-        width: 100%;
-    }
     .navbar-toggle {
         margin-top: 7px;
         margin-bottom: 7px;
