--- a/css/style.css
+++ b/css/style.css
@@ -127,17 +127,17 @@ nav ul {
     background-color: #ededed;
 }
 .owl-dot {
-    width: 12px;
-    height: 12px;
+    width: 16px;
+    height: 16px;
     background-color: transparent;
     border-radius: 10em;
     display: inline-block;
-    border: 2px solid #b1b1b1;
+    border: 2px solid #000;
     margin: 6px;
     transition: background-color .5s ease, transform .5s ease;
 }
 .owl-dot.active {
-    background-color: #333;
+    background-color: #fff;
     border: 2px solid #333;
 }
 .owl-dots {
@@ -169,7 +169,10 @@ nav ul {
     align-items: center;
     justify-content: center;
     font-size: 36px;
-    color: #1c1c1e;
+    color: #000;
+}
+.chevron-background:hover {
+    color: #ff6d0a;
 }
 .main-button {
     color: #000;
