--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,6 @@ nav ul {
 .footer-social-flex a {
     width: 26%;
     font-size: 22px;
-    text-align: center;
 }
 .footer-social-flex a:hover {
     color: #ff6d0a;
@@ -464,6 +463,17 @@ nav ul {
     padding: 13px 15px;
     background: #fff;
     transition: all ease-in-out .3s;
+}
+.owl-feedback-form input, .owl-feedback-form textarea {
+    display: block;
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 5px 10px;
+    border: 1px solid #000;
+    border-radius: 2px;
+}
+.owl-feedback-form .button-center {
+    margin-bottom: 0;
 }
 #burger-content.show {
     left: 0;
