--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ nav ul {
     color: #ff6d0a;
 }
 .category-links-item {
-    width: 24%;
+    width: 24.5%;
     position: relative;
     overflow: hidden;
 }
@@ -281,7 +281,7 @@ nav ul {
     transform: scale(1.1);
 }
 .category-item-block {
-    margin-right: 15px;
+    width: 24.5%;
     position: relative;
     overflow: hidden;
 }
@@ -668,6 +668,13 @@ button.close {
         width: 48%;
         margin-right: 0;
         margin-bottom: 20px;
+    }
+    .category-links-item {
+        width: 48%;
+        margin-bottom: 20px;
+    }
+    .category-links-flex {
+        flex-wrap: wrap;
     }
 }
 @media (max-width: 767px) {
