--- a/css/style.css
+++ b/css/style.css
@@ -590,6 +590,27 @@ button.close {
 .content-container {
     margin-top: 40px;
 }
+.galery-flex-block {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 30px 0;
+}
+.galery-item {
+    width: 19.5%;
+    border: 1px solid #e6e6e6;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+.galery-item img {
+    width: 100%;
+}
+.route-page-info p {
+    font-size: 16px;
+}
+.route-page-info h2 {
+    margin-bottom: 20px;
+}
 @media (max-width: 991px) {
     .navbar-toggle .icon-bar {
         width: 30px;
